# Payment_Service_-API

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 27d6eaa1b56e_add_idempotency_key.py  a6cc2dc342a4_create_payments_table.py  d00a1d9c01f5_change_ids_to_bigint.py
app/: db.py  main.py
app/api/routers/: payments.py
app/core/: config.py
app/models/: payment.py
app/schemas/: payment.py
app/services/: payments.py
test/: conftest.py  test_health.py  test_idempotency.py  test_invalid_transitions.py  test_payments.py  test_payments_flow.py  utils.py
